--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -116,7 +116,177 @@
       },
       "outputs": [],
       "source": [
-        "# Your solution goes here"
+        "# **Task**\n",
+        "\n",
+        "# Your task is to create a Python script using `BeautifulSoup` and `pandas` to scrape IMDb movie data based on user ratings and release dates. This script should be able to filter movies with ratings above a certain threshold and within a specified date range.\n",
+        "\n",
+        "# **Expected Outcome**\n",
+        "\n",
+        "#- A function named `scrape_imdb` that takes four parameters: `title_type`,`user_rating`, `start_date`, and `end_date`.\n",
+        "# - The function should return a DataFrame with the following columns:\n",
+        "# - **Movie Nr**: The number representing the movie’s position in the list.\n",
+        "# - **Title**: The title of the movie.\n",
+        "#  - **Year**: The year the movie was released.\n",
+        "#  - **Rating**: The IMDb rating of the movie.\n",
+        "#  - **Runtime (min)**: The duration of the movie in minutes.\n",
+        "#  - **Genre**: The genre of the movie.\n",
+        "#  - **Description**: A brief description of the movie.\n",
+        "#  - **Director**: The director of the movie.\n",
+        "#  - **Stars**: The main stars of the movie.\n",
+        "#  - **Votes**: The number of votes the movie received.\n",
+        "#  - **Gross ($M)**: The gross earnings of the movie in millions of USD.\n",
+        "\n",
+        "# You will execute this script to scrape data for movies with the Title Type `Feature Film` that have a user rating of `7.5 and above` and were released between `January 1, 1990, and December 31, 1992`.\n",
+        "\n",
+        "# Remember to experiment with different title types, dates and ratings to ensure your code is versatile and can handle various searches effectively!"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "id": "0b97e3f2",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# import libraries\n",
+        "import requests\n",
+        "from bs4 import BeautifulSoup\n",
+        "import pandas as pd\n",
+        "import re\n",
+        "import textwrap\n",
+        "\n",
+        "def scrape_imdb(title_type, user_rating, start_date, end_date):\n",
+        "    # create a list to store the data\n",
+        "    data = []\n",
+        "    # create a list to store the movie numbers\n",
+        "    movie_nr = []\n",
+        "    # create a list to store the movie titles\n",
+        "    title = []\n",
+        "    # create a list to store the movie years\n",
+        "    year = []\n",
+        "    # create a list to store the movie ratings\n",
+        "    rating = []\n",
+        "    # create a list to store the movie runtimes\n",
+        "    runtime = []\n",
+        "    # create a list to store the movie genres\n",
+        "    genre = []\n",
+        "    # create a list to store the movie descriptions\n",
+        "    description = []\n",
+        "    # create a list to store the movie directors\n",
+        "    director = []\n",
+        "    # create a list to store the movie stars\n",
+        "    stars = []\n",
+        "    # create a list to store the movie votes\n",
+        "    votes = []\n",
+        "    # create a list to store the movie gross earnings\n",
+        "    gross = []\n",
+        "    # create a list to store the movie links\n",
+        "    links = []\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 10,
+      "id": "00f6dbc1",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Empty DataFrame\n",
+            "Columns: []\n",
+            "Index: []\n"
+          ]
+        }
+      ],
+      "source": [
+        "# A function named `scrape_imdb` that takes four parameters: `title_type`,`user_rating`, `start_date`, and `end_date`.\n",
+        "# - The function should return a DataFrame with the following columns:\n",
+        "# - **Movie Nr**: The number representing the movie’s position in the list.\n",
+        "# - **Title**: The title of the movie.\n",
+        "#  - **Year**: The year the movie was released.\n",
+        "#  - **Rating**: The IMDb rating of the movie.\n",
+        "#  - **Runtime (min)**: The duration of the movie in minutes.\n",
+        "#  - **Genre**: The genre of the movie.\n",
+        "#  - **Description**: A brief description of the movie.\n",
+        "#  - **Director**: The director of the movie.\n",
+        "#  - **Stars**: The main stars of the movie.\n",
+        "#  - **Votes**: The number of votes the movie received\n",
+        "\n",
+        "import requests\n",
+        "from bs4 import BeautifulSoup\n",
+        "import pandas as pd\n",
+        "\n",
+        "def scrape_imdb(title_type, user_rating, start_date, end_date):\n",
+        "    base_url = 'https://www.imdb.com/search/title/'\n",
+        "    params = {\n",
+        "        'title_type': title_type,\n",
+        "        'user_rating': user_rating,\n",
+        "        'release_date': f'{start_date},{end_date}',\n",
+        "        'count': 50  # Number of results per page (for simplicity we consider one page)\n",
+        "    }\n",
+        "    \n",
+        "    response = requests.get(base_url, params=params)\n",
+        "    soup = BeautifulSoup(response.content, 'html.parser')\n",
+        "    \n",
+        "    movies_list = []\n",
+        "    \n",
+        "    for idx, movie_div in enumerate(soup.find_all('div', class_='lister-item mode-advanced'), start=1):\n",
+        "        # Movie Nr\n",
+        "        movie_nr = idx\n",
+        "        \n",
+        "        # Title\n",
+        "        header = movie_div.find('h3', class_='lister-item-header')\n",
+        "        title = header.find('a').text\n",
+        "        \n",
+        "        # Year\n",
+        "        year = header.find('span', class_='lister-item-year').text.strip('()')\n",
+        "        \n",
+        "        # Rating\n",
+        "        rating = movie_div.find('div', class_='inline-block ratings-imdb-rating')\n",
+        "        rating = float(rating['data-value']) if rating else None\n",
+        "        \n",
+        "        # Runtime\n",
+        "        runtime = movie_div.find('span', class_='runtime')\n",
+        "        runtime = int(runtime.text.replace(' min', '')) if runtime else None\n",
+        "        \n",
+        "        # Genre\n",
+        "        genre = movie_div.find('span', class_='genre')\n",
+        "        genre = genre.text.strip() if genre else None\n",
+        "        \n",
+        "        # Description\n",
+        "        description = movie_div.find_all('p', class_='text-muted')[1].text.strip()\n",
+        "        \n",
+        "        # Director and Stars\n",
+        "        people = movie_div.find('p', class_='').text.strip().split('|')\n",
+        "        director = people[0].replace('Director:', '').replace('Directors:', '').strip()\n",
+        "        stars = people[1].replace('Stars:', '').strip() if len(people) > 1 else None\n",
+        "        \n",
+        "        # Votes\n",
+        "        votes_span = movie_div.find('span', attrs={'name': 'nv'})\n",
+        "        votes = int(votes_span['data-value']) if votes_span else None\n",
+        "        \n",
+        "        movies_list.append({\n",
+        "            'Movie Nr': movie_nr,\n",
+        "            'Title': title,\n",
+        "            'Year': year,\n",
+        "            'Rating': rating,\n",
+        "            'Runtime (min)': runtime,\n",
+        "            'Genre': genre,\n",
+        "            'Description': description,\n",
+        "            'Director': director,\n",
+        "            'Stars': stars,\n",
+        "            'Votes': votes\n",
+        "        })\n",
+        "\n",
+        "    # Convert list to DataFrame\n",
+        "    df = pd.DataFrame(movies_list)\n",
+        "    return df\n",
+        "\n",
+        "# Example usage:\n",
+        "df = scrape_imdb('feature', '7.0,10.0', '2020-01-01', '2020-12-31')\n",
+        "print(df)"
       ]
     },
     {
@@ -163,6 +333,9 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -178,10 +351,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
-    },
-    "colab": {
-      "provenance": []
+      "version": "3.11.9"
     }
   },
   "nbformat": 4,
