Solutions | Lab Web Scraping

--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -59,6 +59,14 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "97ef171c",
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
       "cell_type": "markdown",
       "id": "3519921d-5890-445b-9a33-934ed8ee378c",
       "metadata": {
@@ -109,14 +117,136 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "40359eee-9cd7-4884-bfa4-83344c222305",
-      "metadata": {
-        "id": "40359eee-9cd7-4884-bfa4-83344c222305"
-      },
+      "execution_count": 3,
+      "id": "957d2152",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Defaulting to user installation because normal site-packages is not writeable\n",
+            "Requirement already satisfied: beautifulsoup4 in d:\\programdata\\anaconda3\\lib\\site-packages (4.12.3)\n",
+            "Requirement already satisfied: pandas in d:\\programdata\\anaconda3\\lib\\site-packages (2.2.2)\n",
+            "Requirement already satisfied: requests in d:\\programdata\\anaconda3\\lib\\site-packages (2.32.2)\n",
+            "Requirement already satisfied: soupsieve>1.2 in d:\\programdata\\anaconda3\\lib\\site-packages (from beautifulsoup4) (2.5)\n",
+            "Requirement already satisfied: numpy>=1.26.0 in d:\\programdata\\anaconda3\\lib\\site-packages (from pandas) (1.26.4)\n",
+            "Requirement already satisfied: python-dateutil>=2.8.2 in d:\\programdata\\anaconda3\\lib\\site-packages (from pandas) (2.9.0.post0)\n",
+            "Requirement already satisfied: pytz>=2020.1 in d:\\programdata\\anaconda3\\lib\\site-packages (from pandas) (2024.1)\n",
+            "Requirement already satisfied: tzdata>=2022.7 in d:\\programdata\\anaconda3\\lib\\site-packages (from pandas) (2023.3)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in d:\\programdata\\anaconda3\\lib\\site-packages (from requests) (2.0.4)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in d:\\programdata\\anaconda3\\lib\\site-packages (from requests) (3.7)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in d:\\programdata\\anaconda3\\lib\\site-packages (from requests) (2.2.2)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in d:\\programdata\\anaconda3\\lib\\site-packages (from requests) (2024.7.4)\n",
+            "Requirement already satisfied: six>=1.5 in d:\\programdata\\anaconda3\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n"
+          ]
+        }
+      ],
+      "source": [
+        "!pip install beautifulsoup4 pandas requests\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "id": "80a50bea",
+      "metadata": {},
       "outputs": [],
       "source": [
-        "# Your solution goes here"
+        "url = \"https://www.imdb.com/search/title/?title_type=feature&user_rating=7.5,&release_date=1990-01-01,1992-12-31\"\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "id": "12b7256c",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Scraping page 1...\n",
+            "Empty DataFrame\n",
+            "Columns: []\n",
+            "Index: []\n"
+          ]
+        }
+      ],
+      "source": [
+        "import requests\n",
+        "from bs4 import BeautifulSoup\n",
+        "import pandas as pd\n",
+        "\n",
+        "def scrape_imdb(title_type, user_rating, start_date, end_date):\n",
+        "    # Base URL for IMDb advanced search\n",
+        "    base_url = \"https://www.imdb.com/search/title/\"\n",
+        "    \n",
+        "    # Parameters to filter movies\n",
+        "    params = {\n",
+        "        'title_type': title_type,\n",
+        "        'user_rating': f\"{user_rating},\",  # The comma ensures the upper bound is open\n",
+        "        'release_date': f\"{start_date},{end_date}\",\n",
+        "        'count': '50',  # Results per page (IMDb default is 50)\n",
+        "        'start': '1',  # Start position (to handle pagination)\n",
+        "    }\n",
+        "    \n",
+        "    movie_list = []\n",
+        "    page_number = 1\n",
+        "\n",
+        "    while True:\n",
+        "        print(f\"Scraping page {page_number}...\")\n",
+        "        response = requests.get(base_url, params=params)\n",
+        "        soup = BeautifulSoup(response.content, 'html.parser')\n",
+        "\n",
+        "        # Find all movies listed on the page\n",
+        "        movies = soup.find_all('div', class_='lister-item mode-advanced')\n",
+        "        \n",
+        "        if not movies:\n",
+        "            break  # No more movies to scrape\n",
+        "\n",
+        "        for movie in movies:\n",
+        "            # Extracting details from each movie\n",
+        "            movie_nr = movie.find('span', class_='lister-item-index').text.strip('.')\n",
+        "            title = movie.h3.a.text\n",
+        "            year = movie.h3.find('span', class_='lister-item-year').text\n",
+        "            rating = movie.find('div', class_='inline-block ratings-imdb-rating')['data-value']\n",
+        "            runtime = movie.find('span', class_='runtime')\n",
+        "            runtime = runtime.text if runtime else None\n",
+        "            genre = movie.find('span', class_='genre').text.strip() if movie.find('span', class_='genre') else None\n",
+        "            description = movie.find_all('p', class_='text-muted')[-1].text.strip()\n",
+        "            director_stars = movie.find('p', class_='').text.strip().split('|')\n",
+        "            director = director_stars[0].replace('Director:', '').strip() if len(director_stars) > 0 else None\n",
+        "            stars = director_stars[1].replace('Stars:', '').strip() if len(director_stars) > 1 else None\n",
+        "            votes = movie.find('span', attrs={'name': 'nv'}).text if movie.find('span', attrs={'name': 'nv'}) else None\n",
+        "            gross = movie.find_all('span', attrs={'name': 'nv'})[1].text if len(movie.find_all('span', attrs={'name': 'nv'})) > 1 else None\n",
+        "            \n",
+        "            # Append the data to the list\n",
+        "            movie_list.append({\n",
+        "                \"Movie Nr\": movie_nr,\n",
+        "                \"Title\": title,\n",
+        "                \"Year\": year,\n",
+        "                \"Rating\": rating,\n",
+        "                \"Runtime (min)\": runtime,\n",
+        "                \"Genre\": genre,\n",
+        "                \"Description\": description,\n",
+        "                \"Director\": director,\n",
+        "                \"Stars\": stars,\n",
+        "                \"Votes\": votes,\n",
+        "                \"Gross ($M)\": gross\n",
+        "            })\n",
+        "        \n",
+        "        # Prepare for the next page\n",
+        "        page_number += 1\n",
+        "        params['start'] = str((page_number - 1) * 50 + 1)\n",
+        "    \n",
+        "    # Convert list to DataFrame\n",
+        "    df = pd.DataFrame(movie_list)\n",
+        "    return df\n",
+        "\n",
+        "# Example usage:\n",
+        "df = scrape_imdb('feature', 7.5, '1990-01-01', '1992-12-31')\n",
+        "print(df.head())\n"
       ]
     },
     {
@@ -151,18 +281,87 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "21ac4fc0-a12b-4a00-9266-2020166f0dea",
-      "metadata": {
-        "id": "21ac4fc0-a12b-4a00-9266-2020166f0dea"
-      },
+      "execution_count": 10,
+      "id": "4df3930d",
+      "metadata": {},
       "outputs": [],
       "source": [
-        "# Your solution goes here"
+        "import requests\n",
+        "from bs4 import BeautifulSoup\n",
+        "import math\n",
+        "\n",
+        "# Base URL without the `start` parameter\n",
+        "base_url = \"https://www.imdb.com/search/title/?title_type=feature&release_date=1990-01-01,1992-12-31&user_rating=7.5,\"\n",
+        "\n",
+        "# Total number of movies\n",
+        "total_movies = 631\n",
+        "# Movies per page (according to IMDb structure)\n",
+        "movies_per_page = 50\n",
+        "# Total number of pages needed\n",
+        "total_pages = math.ceil(total_movies / movies_per_page)\n",
+        "\n",
+        "# Function to extract movie data from a single page\n",
+        "def extract_movies_from_page(url):\n",
+        "    response = requests.get(url)\n",
+        "    soup = BeautifulSoup(response.text, 'html.parser')\n",
+        "    \n",
+        "    # Extract movie details\n",
+        "    movies = soup.find_all('div', class_='lister-item mode-advanced')\n",
+        "    movie_data = []\n",
+        "    \n",
+        "    for movie in movies:\n",
+        "        title = movie.h3.a.text\n",
+        "        year = movie.h3.find('span', class_='lister-item-year').text\n",
+        "        rating = movie.find('div', class_='ratings-bar').strong.text if movie.find('div', class_='ratings-bar') else 'N/A'\n",
+        "        movie_data.append({\n",
+        "            'title': title,\n",
+        "            'year': year,\n",
+        "            'rating': rating\n",
+        "        })\n",
+        "    \n",
+        "    return movie_data\n",
+        "\n",
+        "# Loop through all pages and collect movie data\n",
+        "all_movie_data = []\n",
+        "for page in range(total_pages):\n",
+        "    start = page * movies_per_page + 1\n",
+        "    url = f\"{base_url}&start={start}&ref_=adv_nxt\"\n",
+        "    movies_on_page = extract_movies_from_page(url)\n",
+        "    all_movie_data.extend(movies_on_page)\n",
+        "\n",
+        "# Output the collected data (you can also save it to a file)\n",
+        "for movie in all_movie_data:\n",
+        "    print(movie)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "id": "14f832e3",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Ellipsis"
+            ]
+          },
+          "execution_count": 11,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "{'title': 'The Silence of the Lambs', 'year': '(1991)', 'rating': '8.6'}\n",
+        "{'title': 'Terminator 2: Judgment Day', 'year': '(1991)', 'rating': '8.5'}\n",
+        "...\n"
       ]
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -178,10 +377,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
-    },
-    "colab": {
-      "provenance": []
+      "version": "3.12.4"
     }
   },
   "nbformat": 4,
