--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -109,14 +109,131 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "40359eee-9cd7-4884-bfa4-83344c222305",
-      "metadata": {
-        "id": "40359eee-9cd7-4884-bfa4-83344c222305"
-      },
+      "execution_count": 3,
+      "id": "c6c18856",
+      "metadata": {},
       "outputs": [],
       "source": [
-        "# Your solution goes here"
+        "import requests\n",
+        "from bs4 import BeautifulSoup\n",
+        "import pandas as pd\n",
+        "import re"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "id": "aed65a9b",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Empty DataFrame\n",
+            "Columns: []\n",
+            "Index: []\n"
+          ]
+        }
+      ],
+      "source": [
+        "\n",
+        "# Función para convertir el ingreso bruto a millones de dólares\n",
+        "def convert_gross_to_millions(gross):\n",
+        "    if gross:\n",
+        "        gross = gross.replace('$', '').replace('M', '').replace(',', '').strip()\n",
+        "        try:\n",
+        "            return float(gross)\n",
+        "        except:\n",
+        "            return None\n",
+        "    return None\n",
+        "\n",
+        "# Función principal para realizar el scraping\n",
+        "def scrape_imdb(title_type, user_rating, start_date, end_date):\n",
+        "    base_url = \"https://www.imdb.com/search/title/\"\n",
+        "    \n",
+        "    # Parámetros de la URL\n",
+        "    params = {\n",
+        "        'title_type': title_type,\n",
+        "        'release_date': f'{start_date},{end_date}',\n",
+        "        'user_rating': f'{user_rating},',\n",
+        "        'countries': 'us',  # Filtra solo por películas de EE. UU.\n",
+        "        'languages': 'en',\n",
+        "        'count': 250  # Máximo de títulos a mostrar por página\n",
+        "    }\n",
+        "    \n",
+        "    # Realiza la solicitud a IMDb\n",
+        "    response = requests.get(base_url, params=params)\n",
+        "    soup = BeautifulSoup(response.content, 'html.parser')\n",
+        "    \n",
+        "    # Contenedores de películas\n",
+        "    movies_list = soup.find_all('div', class_='lister-item mode-advanced')\n",
+        "    \n",
+        "    # Listas para almacenar los datos\n",
+        "    movie_data = []\n",
+        "    \n",
+        "    # Iterar a través de cada película\n",
+        "    for idx, movie in enumerate(movies_list, start=1):\n",
+        "        # Extraer título\n",
+        "        header = movie.find('h3', class_='lister-item-header')\n",
+        "        title = header.find('a').text\n",
+        "        year = header.find('span', class_='lister-item-year').text\n",
+        "        year = re.sub(r'[^\\d]', '', year)  # Extraer solo el año\n",
+        "        \n",
+        "        # Extraer calificación\n",
+        "        rating_tag = movie.find('div', class_='inline-block ratings-imdb-rating')\n",
+        "        rating = float(rating_tag['data-value']) if rating_tag else None\n",
+        "        \n",
+        "        # Extraer duración\n",
+        "        runtime_tag = movie.find('span', class_='runtime')\n",
+        "        runtime = int(runtime_tag.text.replace('min', '').strip()) if runtime_tag else None\n",
+        "        \n",
+        "        # Extraer género\n",
+        "        genre_tag = movie.find('span', class_='genre')\n",
+        "        genre = genre_tag.text.strip() if genre_tag else None\n",
+        "        \n",
+        "        # Extraer descripción\n",
+        "        description_tag = movie.find_all('p', class_='text-muted')\n",
+        "        description = description_tag[1].text.strip() if len(description_tag) > 1 else None\n",
+        "        \n",
+        "        # Extraer director y estrellas\n",
+        "        people = movie.find('p', class_='').text.strip().split('|')\n",
+        "        director = people[0].replace('Director:', '').replace('Directors:', '').strip() if people else None\n",
+        "        stars = people[1].replace('Stars:', '').strip() if len(people) > 1 else None\n",
+        "        \n",
+        "        # Extraer votos\n",
+        "        votes_tag = movie.find('span', {'name': 'nv'})\n",
+        "        votes = int(votes_tag['data-value']) if votes_tag else None\n",
+        "        \n",
+        "        # Extraer ingresos brutos\n",
+        "        gross_tag = movie.find_all('span', {'name': 'nv'})\n",
+        "        gross = convert_gross_to_millions(gross_tag[1]['data-value']) if len(gross_tag) > 1 else None\n",
+        "        \n",
+        "        # Guardar la información en una lista\n",
+        "        movie_data.append({\n",
+        "            'Movie Nr': idx,\n",
+        "            'Title': title,\n",
+        "            'Year': year,\n",
+        "            'Rating': rating,\n",
+        "            'Runtime (min)': runtime,\n",
+        "            'Genre': genre,\n",
+        "            'Description': description,\n",
+        "            'Director': director,\n",
+        "            'Stars': stars,\n",
+        "            'Votes': votes,\n",
+        "            'Gross ($M)': gross\n",
+        "        })\n",
+        "    \n",
+        "    # Convertir los datos a un DataFrame de pandas\n",
+        "    movie_df = pd.DataFrame(movie_data)\n",
+        "    \n",
+        "    return movie_df\n",
+        "\n",
+        "# Uso del script con los parámetros solicitados\n",
+        "df = scrape_imdb(title_type='feature', user_rating='7.5', start_date='1990-01-01', end_date='1992-12-31')\n",
+        "\n",
+        "# Mostrar las primeras filas del DataFrame resultante\n",
+        "print(df.head())\n"
       ]
     },
     {
@@ -163,6 +280,9 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -178,10 +298,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
-    },
-    "colab": {
-      "provenance": []
+      "version": "3.12.4"
     }
   },
   "nbformat": 4,
