--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -275,7 +275,7 @@
       },
       "outputs": [],
       "source": [
-        "# Your solution goes here"
+        "# Your solution goes here no se"
       ]
     }
   ],
