--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -122,7 +122,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 12,
+      "id": "877ef46b",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "<Response [403]>"
+            ]
+          },
+          "execution_count": 12,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "import requests\n",
+        "\n",
+        "url = \"https://www.imdb.com/search/title\"\n",
+        "response = requests.get(url)\n",
+        "response"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
       "id": "aed65a9b",
       "metadata": {},
       "outputs": [
@@ -230,10 +255,61 @@
         "    return movie_df\n",
         "\n",
         "# Uso del script con los parámetros solicitados\n",
-        "df = scrape_imdb(title_type='feature', user_rating='7.5', start_date='1990-01-01', end_date='1992-12-31')\n",
+        "df = scrape_imdb(title_type='feature', user_rating='7.5', start_date='1990', end_date='1992')\n",
         "\n",
         "# Mostrar las primeras filas del DataFrame resultante\n",
         "print(df.head())\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 10,
+      "id": "1019bfc8",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: requests in c:\\users\\nana-\\anaconda3\\lib\\site-packages (2.32.2)\n",
+            "Collecting BeautifulSoup\n",
+            "  Downloading BeautifulSoup-3.2.2.tar.gz (32 kB)\n",
+            "  Preparing metadata (setup.py): started\n",
+            "  Preparing metadata (setup.py): finished with status 'error'\n",
+            "Note: you may need to restart the kernel to use updated packages.\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "  error: subprocess-exited-with-error\n",
+            "  \n",
+            "  × python setup.py egg_info did not run successfully.\n",
+            "  │ exit code: 1\n",
+            "  ╰─> [7 lines of output]\n",
+            "      Traceback (most recent call last):\n",
+            "        File \"<string>\", line 2, in <module>\n",
+            "        File \"<pip-setuptools-caller>\", line 34, in <module>\n",
+            "        File \"C:\\Users\\nana-\\AppData\\Local\\Temp\\pip-install-qcj3ut6q\\beautifulsoup_73eed5f6fde64bec96feee405db4b639\\setup.py\", line 3\n",
+            "          \"You're trying to run a very old release of Beautiful Soup under Python 3. This will not work.\"<>\"Please use Beautiful Soup 4, available through the pip package 'beautifulsoup4'.\"\n",
+            "                                                                                                         ^^\n",
+            "      SyntaxError: invalid syntax\n",
+            "      [end of output]\n",
+            "  \n",
+            "  note: This error originates from a subprocess, and is likely not a problem with pip.\n",
+            "error: metadata-generation-failed\n",
+            "\n",
+            "× Encountered error while generating package metadata.\n",
+            "╰─> See above for output.\n",
+            "\n",
+            "note: This is an issue with the package mentioned above, not pip.\n",
+            "hint: See above for details.\n"
+          ]
+        }
+      ],
+      "source": [
+        "pip install requests BeautifulSoup"
       ]
     },
     {
