--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -147,123 +147,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
-      "id": "aed65a9b",
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Empty DataFrame\n",
-            "Columns: []\n",
-            "Index: []\n"
-          ]
-        }
-      ],
-      "source": [
-        "\n",
-        "# Función para convertir el ingreso bruto a millones de dólares\n",
-        "def convert_gross_to_millions(gross):\n",
-        "    if gross:\n",
-        "        gross = gross.replace('$', '').replace('M', '').replace(',', '').strip()\n",
-        "        try:\n",
-        "            return float(gross)\n",
-        "        except:\n",
-        "            return None\n",
-        "    return None\n",
-        "\n",
-        "# Función principal para realizar el scraping\n",
-        "def scrape_imdb(title_type, user_rating, start_date, end_date):\n",
-        "    base_url = \"https://www.imdb.com/search/title/\"\n",
-        "    \n",
-        "    # Parámetros de la URL\n",
-        "    params = {\n",
-        "        'title_type': title_type,\n",
-        "        'release_date': f'{start_date},{end_date}',\n",
-        "        'user_rating': f'{user_rating},',\n",
-        "        'countries': 'us',  # Filtra solo por películas de EE. UU.\n",
-        "        'languages': 'en',\n",
-        "        'count': 250  # Máximo de títulos a mostrar por página\n",
-        "    }\n",
-        "    \n",
-        "    # Realiza la solicitud a IMDb\n",
-        "    response = requests.get(base_url, params=params)\n",
-        "    soup = BeautifulSoup(response.content, 'html.parser')\n",
-        "    \n",
-        "    # Contenedores de películas\n",
-        "    movies_list = soup.find_all('div', class_='lister-item mode-advanced')\n",
-        "    \n",
-        "    # Listas para almacenar los datos\n",
-        "    movie_data = []\n",
-        "    \n",
-        "    # Iterar a través de cada película\n",
-        "    for idx, movie in enumerate(movies_list, start=1):\n",
-        "        # Extraer título\n",
-        "        header = movie.find('h3', class_='lister-item-header')\n",
-        "        title = header.find('a').text\n",
-        "        year = header.find('span', class_='lister-item-year').text\n",
-        "        year = re.sub(r'[^\\d]', '', year)  # Extraer solo el año\n",
-        "        \n",
-        "        # Extraer calificación\n",
-        "        rating_tag = movie.find('div', class_='inline-block ratings-imdb-rating')\n",
-        "        rating = float(rating_tag['data-value']) if rating_tag else None\n",
-        "        \n",
-        "        # Extraer duración\n",
-        "        runtime_tag = movie.find('span', class_='runtime')\n",
-        "        runtime = int(runtime_tag.text.replace('min', '').strip()) if runtime_tag else None\n",
-        "        \n",
-        "        # Extraer género\n",
-        "        genre_tag = movie.find('span', class_='genre')\n",
-        "        genre = genre_tag.text.strip() if genre_tag else None\n",
-        "        \n",
-        "        # Extraer descripción\n",
-        "        description_tag = movie.find_all('p', class_='text-muted')\n",
-        "        description = description_tag[1].text.strip() if len(description_tag) > 1 else None\n",
-        "        \n",
-        "        # Extraer director y estrellas\n",
-        "        people = movie.find('p', class_='').text.strip().split('|')\n",
-        "        director = people[0].replace('Director:', '').replace('Directors:', '').strip() if people else None\n",
-        "        stars = people[1].replace('Stars:', '').strip() if len(people) > 1 else None\n",
-        "        \n",
-        "        # Extraer votos\n",
-        "        votes_tag = movie.find('span', {'name': 'nv'})\n",
-        "        votes = int(votes_tag['data-value']) if votes_tag else None\n",
-        "        \n",
-        "        # Extraer ingresos brutos\n",
-        "        gross_tag = movie.find_all('span', {'name': 'nv'})\n",
-        "        gross = convert_gross_to_millions(gross_tag[1]['data-value']) if len(gross_tag) > 1 else None\n",
-        "        \n",
-        "        # Guardar la información en una lista\n",
-        "        movie_data.append({\n",
-        "            'Movie Nr': idx,\n",
-        "            'Title': title,\n",
-        "            'Year': year,\n",
-        "            'Rating': rating,\n",
-        "            'Runtime (min)': runtime,\n",
-        "            'Genre': genre,\n",
-        "            'Description': description,\n",
-        "            'Director': director,\n",
-        "            'Stars': stars,\n",
-        "            'Votes': votes,\n",
-        "            'Gross ($M)': gross\n",
-        "        })\n",
-        "    \n",
-        "    # Convertir los datos a un DataFrame de pandas\n",
-        "    movie_df = pd.DataFrame(movie_data)\n",
-        "    \n",
-        "    return movie_df\n",
-        "\n",
-        "# Uso del script con los parámetros solicitados\n",
-        "df = scrape_imdb(title_type='feature', user_rating='7.5', start_date='1990', end_date='1992')\n",
-        "\n",
-        "# Mostrar las primeras filas del DataFrame resultante\n",
-        "print(df.head())\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 1,
       "id": "1019bfc8",
       "metadata": {},
       "outputs": [
@@ -273,7 +157,7 @@
           "text": [
             "Requirement already satisfied: requests in c:\\users\\nana-\\anaconda3\\lib\\site-packages (2.32.2)\n",
             "Collecting BeautifulSoup\n",
-            "  Downloading BeautifulSoup-3.2.2.tar.gz (32 kB)\n",
+            "  Using cached BeautifulSoup-3.2.2.tar.gz (32 kB)\n",
             "  Preparing metadata (setup.py): started\n",
             "  Preparing metadata (setup.py): finished with status 'error'\n",
             "Note: you may need to restart the kernel to use updated packages.\n"
@@ -291,7 +175,7 @@
             "      Traceback (most recent call last):\n",
             "        File \"<string>\", line 2, in <module>\n",
             "        File \"<pip-setuptools-caller>\", line 34, in <module>\n",
-            "        File \"C:\\Users\\nana-\\AppData\\Local\\Temp\\pip-install-qcj3ut6q\\beautifulsoup_73eed5f6fde64bec96feee405db4b639\\setup.py\", line 3\n",
+            "        File \"C:\\Users\\nana-\\AppData\\Local\\Temp\\pip-install-g388l0dz\\beautifulsoup_84af3ea19b7943a88fe76ec03c6f9b16\\setup.py\", line 3\n",
             "          \"You're trying to run a very old release of Beautiful Soup under Python 3. This will not work.\"<>\"Please use Beautiful Soup 4, available through the pip package 'beautifulsoup4'.\"\n",
             "                                                                                                         ^^\n",
             "      SyntaxError: invalid syntax\n",
