--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -109,14 +109,145 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "id": "40359eee-9cd7-4884-bfa4-83344c222305",
       "metadata": {
         "id": "40359eee-9cd7-4884-bfa4-83344c222305"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Constructed URL: https://www.imdb.com/search/title/?title_type=feature&release_date=1990-01-01,1992-12-31&user_rating=7.5,\n",
+            "No movie containers found. The structure might have changed.\n",
+            "Empty DataFrame\n",
+            "Columns: []\n",
+            "Index: []\n"
+          ]
+        }
+      ],
       "source": [
-        "# Your solution goes here"
+        "import requests\n",
+        "from bs4 import BeautifulSoup\n",
+        "import pandas as pd\n",
+        "\n",
+        "def scrape_imdb(title_type, user_rating, start_date, end_date):\n",
+        "    # Construct the IMDb URL\n",
+        "    url = f\"https://www.imdb.com/search/title/?title_type={title_type}&release_date={start_date},{end_date}&user_rating={user_rating},\"\n",
+        "    \n",
+        "    # Print the constructed URL for debugging purposes\n",
+        "    print(f\"Constructed URL: {url}\")\n",
+        "    \n",
+        "    # Set headers to simulate a browser request\n",
+        "    headers = {\n",
+        "        \"User-Agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.36\"\n",
+        "    }\n",
+        "    \n",
+        "    # Get the page content\n",
+        "    response = requests.get(url, headers=headers)\n",
+        "    \n",
+        "    # Check if the response is valid\n",
+        "    if response.status_code != 200:\n",
+        "        print(f\"Failed to retrieve the data. Status code: {response.status_code}\")\n",
+        "        return pd.DataFrame()\n",
+        "    \n",
+        "    soup = BeautifulSoup(response.text, 'html.parser')\n",
+        "    \n",
+        "    # Define lists to hold the data\n",
+        "    movie_numbers = []\n",
+        "    titles = []\n",
+        "    years = []\n",
+        "    ratings = []\n",
+        "    runtimes = []\n",
+        "    genres = []\n",
+        "    descriptions = []\n",
+        "    directors = []\n",
+        "    stars = []\n",
+        "    votes = []\n",
+        "    gross_earnings = []\n",
+        "    \n",
+        "    # Extract data for each movie on the page\n",
+        "    movie_containers = soup.find_all('div', class_='lister-item-content')\n",
+        "    \n",
+        "    if not movie_containers:\n",
+        "        print(\"No movie containers found. The structure might have changed.\")\n",
+        "        return pd.DataFrame()\n",
+        "    \n",
+        "    for index, container in enumerate(movie_containers, start=1):\n",
+        "        # Movie number\n",
+        "        movie_numbers.append(index)\n",
+        "        \n",
+        "        # Title\n",
+        "        title = container.h3.a.text if container.h3.a else None\n",
+        "        titles.append(title)\n",
+        "        \n",
+        "        # Year\n",
+        "        year = container.h3.find('span', class_='lister-item-year').text.strip(\"() \") if container.h3.find('span', class_='lister-item-year') else None\n",
+        "        years.append(year)\n",
+        "        \n",
+        "        # Rating\n",
+        "        rating = container.strong.text if container.strong else None\n",
+        "        ratings.append(rating)\n",
+        "        \n",
+        "        # Runtime\n",
+        "        runtime = container.find('span', class_='runtime')\n",
+        "        runtime = runtime.text.replace(' min', '') if runtime else None\n",
+        "        runtimes.append(runtime)\n",
+        "        \n",
+        "        # Genre\n",
+        "        genre = container.find('span', class_='genre')\n",
+        "        genre = genre.text.strip() if genre else None\n",
+        "        genres.append(genre)\n",
+        "        \n",
+        "        # Description\n",
+        "        description = container.find_all('p', class_='text-muted')\n",
+        "        description = description[1].text.strip() if len(description) > 1 else None\n",
+        "        descriptions.append(description)\n",
+        "        \n",
+        "        # Director and stars\n",
+        "        credits = container.find('p', class_='').text.strip().split('|') if container.find('p', class_='') else None\n",
+        "        if credits and len(credits) == 2:\n",
+        "            director, stars_info = credits\n",
+        "            directors.append(director.replace('Director:', '').strip())\n",
+        "            stars.append(stars_info.replace('Stars:', '').strip())\n",
+        "        else:\n",
+        "            directors.append(None)\n",
+        "            stars.append(None)\n",
+        "        \n",
+        "        # Votes\n",
+        "        vote_span = container.find('span', attrs={'name': 'nv'})\n",
+        "        votes.append(vote_span.text.replace(',', '') if vote_span else None)\n",
+        "        \n",
+        "        # Gross earnings (if available)\n",
+        "        gross_span = container.find_all('span', attrs={'name': 'nv'})\n",
+        "        gross = None\n",
+        "        if len(gross_span) > 1:\n",
+        "            gross = gross_span[1].text.replace('$', '').replace('M', '')\n",
+        "        gross_earnings.append(gross)\n",
+        "    \n",
+        "    # Create a DataFrame to store the results\n",
+        "    df = pd.DataFrame({\n",
+        "        'Movie Nr': movie_numbers,\n",
+        "        'Title': titles,\n",
+        "        'Year': years,\n",
+        "        'Rating': ratings,\n",
+        "        'Runtime (min)': runtimes,\n",
+        "        'Genre': genres,\n",
+        "        'Description': descriptions,\n",
+        "        'Director': directors,\n",
+        "        'Stars': stars,\n",
+        "        'Votes': votes,\n",
+        "        'Gross ($M)': gross_earnings\n",
+        "    })\n",
+        "    \n",
+        "    return df\n",
+        "\n",
+        "# Call the function with the given parameters\n",
+        "df = scrape_imdb('feature', '7.5', '1990-01-01', '1992-12-31')\n",
+        "\n",
+        "# Show the result\n",
+        "print(df)"
       ]
     },
     {
@@ -151,18 +282,157 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "id": "21ac4fc0-a12b-4a00-9266-2020166f0dea",
       "metadata": {
         "id": "21ac4fc0-a12b-4a00-9266-2020166f0dea"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Scraping URL: https://www.imdb.com/search/title/?title_type=feature&release_date=1990-01-01,1992-12-31&user_rating=7.5,&start=1&ref_=adv_nxt\n",
+            "No movie containers found. The structure might have changed.\n",
+            "Scraping URL: https://www.imdb.com/search/title/?title_type=feature&release_date=1990-01-01,1992-12-31&user_rating=7.5,&start=51&ref_=adv_nxt\n",
+            "No movie containers found. The structure might have changed.\n",
+            "Scraping URL: https://www.imdb.com/search/title/?title_type=feature&release_date=1990-01-01,1992-12-31&user_rating=7.5,&start=101&ref_=adv_nxt\n",
+            "No movie containers found. The structure might have changed.\n",
+            "Scraping URL: https://www.imdb.com/search/title/?title_type=feature&release_date=1990-01-01,1992-12-31&user_rating=7.5,&start=151&ref_=adv_nxt\n",
+            "No movie containers found. The structure might have changed.\n",
+            "Scraping URL: https://www.imdb.com/search/title/?title_type=feature&release_date=1990-01-01,1992-12-31&user_rating=7.5,&start=201&ref_=adv_nxt\n",
+            "No movie containers found. The structure might have changed.\n",
+            "Scraping URL: https://www.imdb.com/search/title/?title_type=feature&release_date=1990-01-01,1992-12-31&user_rating=7.5,&start=251&ref_=adv_nxt\n",
+            "No movie containers found. The structure might have changed.\n",
+            "Scraping URL: https://www.imdb.com/search/title/?title_type=feature&release_date=1990-01-01,1992-12-31&user_rating=7.5,&start=301&ref_=adv_nxt\n",
+            "No movie containers found. The structure might have changed.\n",
+            "Scraping URL: https://www.imdb.com/search/title/?title_type=feature&release_date=1990-01-01,1992-12-31&user_rating=7.5,&start=351&ref_=adv_nxt\n",
+            "No movie containers found. The structure might have changed.\n",
+            "Scraping URL: https://www.imdb.com/search/title/?title_type=feature&release_date=1990-01-01,1992-12-31&user_rating=7.5,&start=401&ref_=adv_nxt\n",
+            "No movie containers found. The structure might have changed.\n",
+            "Scraping URL: https://www.imdb.com/search/title/?title_type=feature&release_date=1990-01-01,1992-12-31&user_rating=7.5,&start=451&ref_=adv_nxt\n",
+            "No movie containers found. The structure might have changed.\n",
+            "Scraping URL: https://www.imdb.com/search/title/?title_type=feature&release_date=1990-01-01,1992-12-31&user_rating=7.5,&start=501&ref_=adv_nxt\n",
+            "No movie containers found. The structure might have changed.\n",
+            "Scraping URL: https://www.imdb.com/search/title/?title_type=feature&release_date=1990-01-01,1992-12-31&user_rating=7.5,&start=551&ref_=adv_nxt\n",
+            "No movie containers found. The structure might have changed.\n",
+            "Scraping URL: https://www.imdb.com/search/title/?title_type=feature&release_date=1990-01-01,1992-12-31&user_rating=7.5,&start=601&ref_=adv_nxt\n",
+            "No movie containers found. The structure might have changed.\n",
+            "Empty DataFrame\n",
+            "Columns: []\n",
+            "Index: []\n"
+          ]
+        }
+      ],
       "source": [
-        "# Your solution goes here"
+        "import requests\n",
+        "from bs4 import BeautifulSoup\n",
+        "import pandas as pd\n",
+        "\n",
+        "def scrape_imdb_multiple_pages(title_type, user_rating, start_date, end_date):\n",
+        "    # Base IMDb URL\n",
+        "    base_url = f\"https://www.imdb.com/search/title/?title_type={title_type}&release_date={start_date},{end_date}&user_rating={user_rating},\"\n",
+        "    \n",
+        "    # Initialize variables for pagination\n",
+        "    movies_per_page = 50\n",
+        "    total_movies = 631  # Example number of movies, adjust this based on the actual number of results\n",
+        "    all_movies = []  # List to store all movies\n",
+        "    \n",
+        "    # Loop through all pages\n",
+        "    for start in range(1, total_movies, movies_per_page):\n",
+        "        # Construct the paginated URL\n",
+        "        url = f\"{base_url}&start={start}&ref_=adv_nxt\"\n",
+        "        print(f\"Scraping URL: {url}\")  # Print the URL for debugging\n",
+        "\n",
+        "        # Set headers to simulate a browser request\n",
+        "        headers = {\n",
+        "            \"User-Agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.36\"\n",
+        "        }\n",
+        "        \n",
+        "        # Get the page content\n",
+        "        response = requests.get(url, headers=headers)\n",
+        "        \n",
+        "        # Check if the response is valid\n",
+        "        if response.status_code != 200:\n",
+        "            print(f\"Failed to retrieve the data. Status code: {response.status_code}\")\n",
+        "            continue\n",
+        "        \n",
+        "        soup = BeautifulSoup(response.text, 'html.parser')\n",
+        "        \n",
+        "        # Extract data for each movie on the page\n",
+        "        movie_containers = soup.find_all('div', class_='lister-item mode-advanced')\n",
+        "        \n",
+        "        if not movie_containers:\n",
+        "            print(\"No movie containers found. The structure might have changed.\")\n",
+        "            continue\n",
+        "        \n",
+        "        for index, container in enumerate(movie_containers, start=start):\n",
+        "            # Movie details\n",
+        "            movie_data = {}\n",
+        "            \n",
+        "            # Title\n",
+        "            movie_data['Movie Nr'] = index\n",
+        "            movie_data['Title'] = container.h3.a.text if container.h3.a else None\n",
+        "            \n",
+        "            # Year\n",
+        "            movie_data['Year'] = container.h3.find('span', class_='lister-item-year').text.strip(\"() \") if container.h3.find('span', class_='lister-item-year') else None\n",
+        "            \n",
+        "            # Rating\n",
+        "            movie_data['Rating'] = container.strong.text if container.strong else None\n",
+        "            \n",
+        "            # Runtime\n",
+        "            runtime = container.find('span', class_='runtime')\n",
+        "            movie_data['Runtime (min)'] = runtime.text.replace(' min', '') if runtime else None\n",
+        "            \n",
+        "            # Genre\n",
+        "            genre = container.find('span', class_='genre')\n",
+        "            movie_data['Genre'] = genre.text.strip() if genre else None\n",
+        "            \n",
+        "            # Description\n",
+        "            description = container.find_all('p', class_='text-muted')\n",
+        "            movie_data['Description'] = description[1].text.strip() if len(description) > 1 else None\n",
+        "            \n",
+        "            # Director and stars\n",
+        "            credits = container.find('p', class_='').text.strip().split('|') if container.find('p', class_='') else None\n",
+        "            if credits and len(credits) == 2:\n",
+        "                director, stars_info = credits\n",
+        "                movie_data['Director'] = director.replace('Director:', '').strip()\n",
+        "                movie_data['Stars'] = stars_info.replace('Stars:', '').strip()\n",
+        "            else:\n",
+        "                movie_data['Director'] = None\n",
+        "                movie_data['Stars'] = None\n",
+        "            \n",
+        "            # Votes\n",
+        "            vote_span = container.find('span', attrs={'name': 'nv'})\n",
+        "            movie_data['Votes'] = vote_span.text.replace(',', '') if vote_span else None\n",
+        "            \n",
+        "            # Gross earnings (if available)\n",
+        "            gross_span = container.find_all('span', attrs={'name': 'nv'})\n",
+        "            movie_data['Gross ($M)'] = None\n",
+        "            if len(gross_span) > 1:\n",
+        "                gross = gross_span[1].text.replace('$', '').replace('M', '')\n",
+        "                movie_data['Gross ($M)'] = gross\n",
+        "            \n",
+        "            # Add movie data to the list\n",
+        "            all_movies.append(movie_data)\n",
+        "    \n",
+        "    # Create a DataFrame to store the results\n",
+        "    df = pd.DataFrame(all_movies)\n",
+        "    \n",
+        "    return df\n",
+        "\n",
+        "# Call the function to scrape multiple pages\n",
+        "df = scrape_imdb_multiple_pages('feature', '7.5', '1990-01-01', '1992-12-31')\n",
+        "\n",
+        "# Show the result\n",
+        "print(df)"
       ]
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -178,10 +448,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
-    },
-    "colab": {
-      "provenance": []
+      "version": "3.12.3"
     }
   },
   "nbformat": 4,
