--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -110,13 +110,74 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "40359eee-9cd7-4884-bfa4-83344c222305",
-      "metadata": {
-        "id": "40359eee-9cd7-4884-bfa4-83344c222305"
-      },
+      "id": "d68f4c92",
+      "metadata": {},
       "outputs": [],
       "source": [
-        "# Your solution goes here"
+        "import requests\n",
+        "from bs4 import BeautifulSoup\n",
+        "import pandas as pd\n",
+        "\n",
+        "def scrape_filmaffinity(title_type=None, user_rating=None, start_date=None, end_date=None):\n",
+        "    url = \"https://www.filmaffinity.com/us/topgen.php\" # I used other URL to test this exercise\n",
+        "    response = requests.get(url)\n",
+        "    \n",
+        "    # Check if the request was successful\n",
+        "    if response.status_code != 200:\n",
+        "        print(f\"Error accessing the page: {response.status_code}\")\n",
+        "        return None\n",
+        "\n",
+        "    soup = BeautifulSoup(response.content, 'html.parser')\n",
+        "    \n",
+        "    # Find movie items\n",
+        "    movie_items = soup.find_all('div', class_='mc-title')\n",
+        "    \n",
+        "    if not movie_items:\n",
+        "        print(\"No movies found on the page.\")\n",
+        "        return None\n",
+        "\n",
+        "    movie_data = []\n",
+        "\n",
+        "    for i, item in enumerate(movie_items, 1):\n",
+        "        title = item.find('a').text.strip()\n",
+        "        year = item.find_next('span').text.strip('()')\n",
+        "        rating = item.find_next('div', class_='rating').text.strip() if item.find_next('div', class_='rating') else None\n",
+        "        description = item.find_next('p').text.strip() if item.find_next('p') else None\n",
+        "        runtime = None\n",
+        "        genre = None\n",
+        "        director = None\n",
+        "        stars = None\n",
+        "        votes = None\n",
+        "        gross = None\n",
+        "\n",
+        "        movie_data.append({\n",
+        "            'Movie Nr': i,\n",
+        "            'Title': title,\n",
+        "            'Year': year,\n",
+        "            'Rating': rating,\n",
+        "            'Runtime (min)': runtime,\n",
+        "            'Genre': genre,\n",
+        "            'Description': description,\n",
+        "            'Director': director,\n",
+        "            'Stars': stars,\n",
+        "            'Votes': votes,\n",
+        "            'Gross ($M)': gross\n",
+        "        })\n",
+        "\n",
+        "    df = pd.DataFrame(movie_data)\n",
+        "    \n",
+        "    return df\n",
+        "\n",
+        "# Example usage of the function\n",
+        "df_movies = scrape_filmaffinity()\n",
+        "\n",
+        "# Print the DataFrame to check the output\n",
+        "if df_movies is not None:\n",
+        "    print(df_movies.head())\n",
+        "else:\n",
+        "    print(\"No data available.\")\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -158,11 +219,98 @@
       },
       "outputs": [],
       "source": [
-        "# Your solution goes here"
+        "# Your solution goes here\n",
+        "\n",
+        "import requests\n",
+        "from bs4 import BeautifulSoup\n",
+        "import pandas as pd\n",
+        "\n",
+        "def scrape_filmaffinity(title_type=None, user_rating=None, start_date=None, end_date=None):\n",
+        "    base_url = \"https://www.filmaffinity.com/us/topgen.php\"\n",
+        "    movie_data = []\n",
+        "    page = 1\n",
+        "    movies_per_page = 50\n",
+        "    total_movies = 631\n",
+        "    \n",
+        "    while (page - 1) * movies_per_page < total_movies:\n",
+        "        params = {\n",
+        "            'title_type': title_type,\n",
+        "            'release_date': f'{start_date},{end_date}',\n",
+        "            'user_rating': f'{user_rating},10',\n",
+        "            'start': (page - 1) * movies_per_page + 1,\n",
+        "            'ref_': 'adv_nxt'\n",
+        "        }\n",
+        "        \n",
+        "        response = requests.get(base_url, params=params)\n",
+        "        \n",
+        "        # Check if the request was successful\n",
+        "        if response.status_code != 200:\n",
+        "            print(f\"Error accessing the page: {response.status_code}\")\n",
+        "            break\n",
+        "\n",
+        "        soup = BeautifulSoup(response.content, 'html.parser')\n",
+        "        \n",
+        "        # Find movie items\n",
+        "        movie_items = soup.find_all('div', class_='mc-title')\n",
+        "        \n",
+        "        if not movie_items:\n",
+        "            print(\"No more movies found or end of pagination.\")\n",
+        "            break\n",
+        "\n",
+        "        for i, item in enumerate(movie_items, start=(page - 1) * movies_per_page + 1):\n",
+        "            title = item.find('a').text.strip()\n",
+        "            year = item.find_next('span').text.strip('()')\n",
+        "            rating = item.find_next('div', class_='rating').text.strip() if item.find_next('div', class_='rating') else None\n",
+        "            description = item.find_next('p').text.strip() if item.find_next('p') else None\n",
+        "            runtime = None\n",
+        "            genre = None\n",
+        "            director = None\n",
+        "            stars = None\n",
+        "            votes = None\n",
+        "            gross = None\n",
+        "\n",
+        "            movie_data.append({\n",
+        "                'Movie Nr': i,\n",
+        "                'Title': title,\n",
+        "                'Year': year,\n",
+        "                'Rating': rating,\n",
+        "                'Runtime (min)': runtime,\n",
+        "                'Genre': genre,\n",
+        "                'Description': description,\n",
+        "                'Director': director,\n",
+        "                'Stars': stars,\n",
+        "                'Votes': votes,\n",
+        "                'Gross ($M)': gross\n",
+        "            })\n",
+        "\n",
+        "        page += 1\n",
+        "\n",
+        "    df = pd.DataFrame(movie_data)\n",
+        "    \n",
+        "    return df\n",
+        "\n",
+        "# Example usage of the function\n",
+        "df_movies = scrape_filmaffinity()\n",
+        "\n",
+        "# Print the DataFrame to check the output\n",
+        "if df_movies is not None:\n",
+        "    print(df_movies.head())\n",
+        "else:\n",
+        "    print(\"No data available.\")\n",
+        "\n",
+        "\n",
+        "# I was bloqued in filmaffinity.com thanks to this exercise...\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -178,10 +326,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
-    },
-    "colab": {
-      "provenance": []
+      "version": "3.12.5"
     }
   },
   "nbformat": 4,
