First try to solve Lab Day 10

--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -109,14 +109,79 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "40359eee-9cd7-4884-bfa4-83344c222305",
       "metadata": {
         "id": "40359eee-9cd7-4884-bfa4-83344c222305"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Failed to retrieve the webpage. Status code: 403\n",
+            "Empty DataFrame\n",
+            "Columns: []\n",
+            "Index: []\n"
+          ]
+        }
+      ],
       "source": [
-        "# Your solution goes here"
+        "# Your solution goes here\n",
+        "\n",
+        "import requests\n",
+        "from bs4 import BeautifulSoup\n",
+        "import pandas as pd\n",
+        "\n",
+        "def scrape_imdb(title_type, user_rating, start_date, end_date):\n",
+        "    url = f\"https://www.imdb.com/search/title/?title_type={title_type}&user_rating={user_rating},&release_date={start_date},{end_date}&sort=user_rating,desc\"\n",
+        "    \n",
+        "    response = requests.get(url)\n",
+        "    if response.status_code != 200:\n",
+        "        print(\"Failed to retrieve the webpage. Status code:\", response.status_code)\n",
+        "        return pd.DataFrame()\n",
+        "    \n",
+        "    soup = BeautifulSoup(response.content, 'html.parser')\n",
+        "    \n",
+        "    movie_list = []\n",
+        "    \n",
+        "    movies = soup.find_all('div', class_='lister-item mode-advanced')\n",
+        "    \n",
+        "    for movie_nr, movie in enumerate(movies, start=1):\n",
+        "        title = movie.h3.a.text\n",
+        "        year = movie.h3.find('span', class_='lister-item-year').text\n",
+        "        rating = movie.find('div', class_='inline-block ratings-imdb-rating').strong.text if movie.find('div', class_='inline-block ratings-imdb-rating') else 'N/A'\n",
+        "        runtime = movie.find('span', class_='runtime').text.replace(' min', '') if movie.find('span', class_='runtime') else 'N/A'\n",
+        "        genre = movie.find('span', class_='genre').text.strip() if movie.find('span', class_='genre') else 'N/A'\n",
+        "        description = movie.find_all('p', class_='text-muted')[1].text.strip() if len(movie.find_all('p', class_='text-muted')) > 1 else 'N/A'\n",
+        "        \n",
+        "        credits = movie.find('p', class_='').text.strip().split('|') if movie.find('p', class_='') else ['N/A']\n",
+        "        director = credits[0].replace('Director:', '').replace('Directors:', '').strip() if len(credits) > 0 else 'N/A'\n",
+        "        stars = credits[1].replace('Stars:', '').strip() if len(credits) > 1 else 'N/A'\n",
+        "        \n",
+        "        votes = movie.find('span', attrs={'name': 'nv'}).text if movie.find('span', attrs={'name': 'nv'}) else 'N/A'\n",
+        "        gross = movie.find_all('span', attrs={'name': 'nv'})[1].text.replace('$', '').replace('M', '') if len(movie.find_all('span', attrs={'name': 'nv'})) > 1 else 'N/A'\n",
+        "        \n",
+        "        movie_list.append({\n",
+        "            'Movie Nr': movie_nr,\n",
+        "            'Title': title,\n",
+        "            'Year': year,\n",
+        "            'Rating': rating,\n",
+        "            'Runtime (min)': runtime,\n",
+        "            'Genre': genre,\n",
+        "            'Description': description,\n",
+        "            'Director': director,\n",
+        "            'Stars': stars,\n",
+        "            'Votes': votes,\n",
+        "            'Gross ($M)': gross\n",
+        "        })\n",
+        "    \n",
+        "    df = pd.DataFrame(movie_list)\n",
+        "    return df\n",
+        "\n",
+        "df_movies = scrape_imdb('feature', '7.5', '1990-01-01', '1992-12-31')\n",
+        "\n",
+        "print(df_movies)"
       ]
     },
     {
@@ -163,6 +228,9 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -178,10 +246,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
-    },
-    "colab": {
-      "provenance": []
+      "version": "3.12.4"
     }
   },
   "nbformat": 4,
